--- a/config/meson.build
+++ b/config/meson.build
@@ -21,14 +21,14 @@ fc = meson.get_compiler('fortran')
 fc_id = fc.get_id()
 message(fc_id)
 
-if os == 'windows'
-    if fc_id != 'intel'
-        add_project_link_arguments(
-          '-Wl,--allow-multiple-definition',
-          language: 'fortran',
-        )
-    endif
-endif
+#if os == 'windows'
+#    if fc_id != 'intel'
+#        add_project_link_arguments(
+#          '-Wl,--allow-multiple-definition',
+#          language: 'fortran',
+#        )
+#    endif
+#endif
 
 if fc_id == 'gcc'
   add_project_arguments(
